[tool.poetry]
name = "short-url"
version = "0.1.0"
description = "URL Shortener Service"
authors = ["Hazel Lin <hazel.ys.lin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = { extras = ["standard"], version = "^0.23.0" }
fastapi = "^0.115.0"
sqlmodel = "^0.0.8"
apscheduler = "^3.10.4"
alembic = "^1.14.0"
pydantic = "^1.10.14"
nanoid = "^2.0.0"
slowapi = "^0.1.4"
psycopg2-binary = "^2.9.9"
httpx = "^0.26.0"
asyncpg = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
